tests/sema/fail/v39_fail_single_member_sum.ep
# COMPILE_FAIL: sum type Wrapper requires at least two members
type Item {
    value: i64
}

type Wrapper = Item

fun main(): void {
}
